Finishing home scene

--- a/index.html
+++ b/index.html
@@ -157,7 +157,8 @@
           </div>
       </div>
     </div>
-    <div id="scene-home" class="scene" style="display: none">
+    <div id="scene-home" class="scene" style="display: none"></div>
+    <div id="scene-live" class="scene" style="display: none;">
       <div class="header">
       </div>
       <div id="trailer">
