Finishing error scene

--- a/index.html
+++ b/index.html
@@ -177,10 +177,10 @@
     </div>
     <div id="scene-error" class="scene" style="display: none">
       <div class="error-404">
-        <h1>Something went wrong</h1>
-        <p class="mb-2">Sorry, we couldn't find the page you were looking for.</p>
-        <p>To return to the profiles page click on the button bellow</p>
-        <button type="button">Go back</button>
+        <h1 data-i18n="error_header"></h1>
+        <p class="mb-2" data-i18n="error_msg"></p>
+        <p data-i18n="error_back"></p>
+        <button type="button" data-i18n="error_btn"></button>
       </div>
       <div class="pic">
         <img src="https://i.gifer.com/52O8.gif" alt="Not found" width="300px">
