--- a/index.html
+++ b/index.html
@@ -10,7 +10,11 @@
     <link rel="stylesheet" type="text/css" href="css/keyboard.css" />
     <link rel="stylesheet" type="text/css" href="css/settings.css" />
     <link rel="stylesheet" type="text/css" href="css/sidebar.css" />
+    <link rel="stylesheet" type="text/css" href="css/search.css" />
     <link rel="stylesheet" type="text/css" href="css/home.css" />
+    <link rel="stylesheet" type="text/css" href="css/live.css" />
+    <link rel="stylesheet" type="text/css" href="css/movie.css" />
+    <link rel="stylesheet" type="text/css" href="css/series.css" />
     <link rel="stylesheet" type="text/css" href="css/error.css" />
 
     <!-- Bootstrap -->
