Modifing search an dmovie scenes

--- a/index.html
+++ b/index.html
@@ -18,28 +18,12 @@
         <link rel="stylesheet" type="text/css" href="css/error.css" />
 
         <!-- Bootstrap -->
-        <link
-            href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/css/bootstrap.min.css"
-            rel="stylesheet"
-            integrity="sha384-F3w7mX95PdgyTmZZMECAngseQB83DfGTowi0iMjiWaeVhAn4FJkqJByhZMI3AhiU"
-            crossorigin="anonymous"
-        />
-        <link
-            rel="stylesheet"
-            href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css"
-        />
+        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-F3w7mX95PdgyTmZZMECAngseQB83DfGTowi0iMjiWaeVhAn4FJkqJByhZMI3AhiU" crossorigin="anonymous" />
+        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css" />
         <link rel="preconnect" href="https://fonts.googleapis.com" />
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-        <link
-            href="https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;500;600;700;800;900&display=swap"
-            rel="stylesheet"
-        />
-        <link
-            rel="stylesheet"
-            href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css"
-            integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p"
-            crossorigin="anonymous"
-        />
+        <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;500;600;700;800;900&display=swap" rel="stylesheet" />
+        <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css" integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" crossorigin="anonymous" />
 
         <script src="js/core/jquery.js"></script>
         <script src="js/core/jasmine.js"></script>
@@ -49,11 +33,7 @@
         <script src="js/core/mustache.js"></script>
         <script src="js/core/helpers.js"></script>
         <script src="js/core/main.js"></script>
-        <script
-            src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/js/bootstrap.bundle.min.js"
-            integrity="sha384-/bQdsTh/da6pkI1MST/rWKFNjaCP5gBSY4sEBT38Q/9RBh9AH40zEOg7Hlq2THRZ"
-            crossorigin="anonymous"
-        ></script>
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-/bQdsTh/da6pkI1MST/rWKFNjaCP5gBSY4sEBT38Q/9RBh9AH40zEOg7Hlq2THRZ" crossorigin="anonymous" ></script>
 
         <script src="js/core/module/developer.js"></script>
         <script src="js/core/module/events.js"></script>
@@ -100,7 +80,9 @@
 
         <!-- Snippets -->
         <script src="js/snippets/sidebar.js"></script>
-        <script src="js/snippets/home-list.js"></script>
+        <script src="js/snippets/live-list.js"></script>
+        <script src="js/snippets/movie-list.js"></script>
+        <script src="js/snippets/serie-list.js"></script>
 
         <script src="config.js"></script>
         <script src="js/app.js"></script>
@@ -110,53 +92,23 @@
         <div id="scene-splash" class="scene" style="display: none">
             <img src="./Assets//img/loading.gif" width="286" />
         </div>
-        <div
-            id="scene-profiles"
-            class="scene flex-column"
-            style="display: none"
-        >
-            <h4
-                id="choose-film"
-                style="z-index: 2"
-                data-i18n="profile_header"
-            ></h4>
+        <div id="scene-profiles" class="scene flex-column" style="display: none" >
+            <h4 id="choose-film" style="z-index: 2" data-i18n="profile_header" ></h4>
             <div id="profile-list"></div>
             <div id="profile-btn" class="text-center"></div>
             <!-- Exit Modal -->
-            <div
-                class="modal fade"
-                id="ExitModal"
-                tabindex="-1"
-                aria-labelledby="ExitModalLabel"
-                aria-hidden="true"
-            >
+            <div class="modal fade" id="ExitModal" tabindex="-1" aria-labelledby="ExitModalLabel" aria-hidden="true" >
                 <div class="modal-dialog">
                     <div class="modal-content">
                         <div class="modal-header">
-                            <h5 class="modal-title" id="exampleModalLabel">
-                                Exit
-                            </h5>
+                            <h5 class="modal-title" id="exampleModalLabel"> Exit </h5>
                         </div>
                         <div class="modal-body">
                             Are you sure you want exit ?
                         </div>
                         <div class="modal-footer">
-                            <button
-                                id="ExitBtnClose"
-                                type="button"
-                                class="btn focusable"
-                                data-bs-dismiss="modal"
-                                data-action="ExitModalClose"
-                            >
-                                Close
-                            </button>
-                            <button
-                                type="button"
-                                class="btn focusable"
-                                data-action="Exit"
-                            >
-                                Exit
-                            </button>
+                            <button   id="ExitBtnClose" type="button" class="btn focusable" data-bs-dismiss="modal" data-action="ExitModalClose" > Close </button>
+                            <button type="button" class="btn focusable" data-action="Exit" >  Exit </button>
                         </div>
                     </div>
                 </div>
@@ -284,12 +236,13 @@
         </div>
         <div id="scene-search" class="scene" style="display: none">
             <div id="search-Bar">
-                <input
-                    type="search"
-                    placeholder="Search"
-                    id="search-input"
-                    class="form-control focusable"
-                />
+                <select class="form-select" aria-label="Select a type">
+                    <option>Select a type</option>
+                    <option value="movies">Movies</option>
+                    <option value="series">Series</option>
+                    <option value="lives">Lives</option>
+                </select>
+                <input type="search" placeholder="Search" id="search-input" class="form-control focusable" />
             </div>
             <div id="container"></div>
         </div>
@@ -307,20 +260,14 @@
         <div id="scene-movie" class="scene" style="display: none">
             <div class="header"></div>
             <div id="trailer">
-                <img
-                    alt="trailer"
-                    src="https://a-static.besthdwallpaper.com/oblivion-movie-poster-wallpaper-11407_L.jpg"
-                />
+                <img alt="trailer" src="https://a-static.besthdwallpaper.com/oblivion-movie-poster-wallpaper-11407_L.jpg" />
             </div>
-            <div id="snippet-home-list"></div>
+            <div id="snippet-movie-list"></div>
         </div>
         <div id="scene-serie" class="scene" style="display: none">
             <div class="header"></div>
             <div id="trailer">
-                <img
-                    alt="trailer"
-                    src="https://a-static.besthdwallpaper.com/oblivion-movie-poster-wallpaper-11407_L.jpg"
-                />
+                <img alt="trailer" src="https://a-static.besthdwallpaper.com/oblivion-movie-poster-wallpaper-11407_L.jpg" />
             </div>
             <div id="snippet-home-list"></div>
         </div>
@@ -379,11 +326,7 @@
                 <button type="button" data-i18n="error_btn"></button>
             </div>
             <div class="pic">
-                <img
-                    src="https://i.gifer.com/52O8.gif"
-                    alt="Not found"
-                    width="300px"
-                />
+                <img src="https://i.gifer.com/52O8.gif" alt="Not found" width="300px" />
             </div>
         </div>
 
