--- a/index.html
+++ b/index.html
@@ -258,8 +258,17 @@
             <div id="snippet-home-list"></div>
         </div>
         <div id="scene-movie" class="scene" style="display: none">
-            <div class="header"></div>
+            <div class="header">
+                <h2 id="filmName"></h2>
+                <div class="underHeader">
+                    <span id="filmYear"></span>
+                    <span id="filmDuration"></span>
+                    <span id="filmRating"></span>
+                </div>
+                <p id="filmDescription"></p>
+            </div>
             <div id="trailer">
+                <div></div>
                 <img alt="trailer" src="https://a-static.besthdwallpaper.com/oblivion-movie-poster-wallpaper-11407_L.jpg" />
             </div>
             <div id="snippet-movie-list"></div>
