--- a/index.html
+++ b/index.html
@@ -83,6 +83,7 @@
         <script src="js/snippets/live-list.js"></script>
         <script src="js/snippets/movie-list.js"></script>
         <script src="js/snippets/serie-list.js"></script>
+        <script src="js/snippets/movie-details.js"></script>
 
         <script src="config.js"></script>
         <script src="js/app.js"></script>
@@ -273,6 +274,14 @@
                 <img alt="trailer" src="https://a-static.besthdwallpaper.com/oblivion-movie-poster-wallpaper-11407_L.jpg" />
             </div>
             <div id="snippet-movie-list"></div>
+            <div id="snippet-movie-details" style="display: none;">
+                <label>Director : <span id="director"></span></label>
+                <label id="genre"></label>
+                <button class="btn focusable" data-action="watch"><i class="bi bi-play-fill"></i>Watch this film</button>
+                <button class="btn focusable" data-action="trailer"><i class="bi bi-collection-play-fill"></i>Watch trailer</button>
+                <button class="btn focusable" data-action="cc"><i class="bi bi-badge-cc-fill"></i>Audio and CC</button>
+                <button class="btn focusable" data-action="later"><i class="bi bi-plus-square-fill"></i>Add to watch later</button>
+            </div>
         </div>
         <div id="scene-serie" class="scene" style="display: none">
             <div class="header"></div>
