--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
         <link rel="stylesheet" type="text/css" href="css/movie.css" />
         <link rel="stylesheet" type="text/css" href="css/series.css" />
         <link rel="stylesheet" type="text/css" href="css/error.css" />
+        <link rel="stylesheet" type="text/css" href="css/player.css" />
 
         <!-- Bootstrap -->
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-F3w7mX95PdgyTmZZMECAngseQB83DfGTowi0iMjiWaeVhAn4FJkqJByhZMI3AhiU" crossorigin="anonymous" />
@@ -84,6 +85,7 @@
         <script src="js/snippets/movie-list.js"></script>
         <script src="js/snippets/serie-list.js"></script>
         <script src="js/snippets/movie-details.js"></script>
+        <script src="js/snippets/player.js"></script>
 
         <script src="config.js"></script>
         <script src="js/app.js"></script>
@@ -357,6 +359,40 @@
             </header>
             <ul id="sidebar-list"></ul>
             <ul id="sidebar-footer"></ul>
+        </div>
+        <div id="snippet-player" style="display: none">
+            <div id="controles">
+                <div id="top-controles">
+                    <span id="back" class="focusable top">
+                        <i class="fas fa-arrow-left"></i>
+                    </span>
+                    <span id="reply" class="focusable top">
+                        <i class="fas fa-redo"></i>
+                    </span>
+                    <span id="cc" class="focusable top">
+                        <i class="fas fa-audio-description"></i>
+                    </span>
+                    <span id="next" class="focusable top">
+                        <i class="fas fa-forward"></i>
+                    </span>
+                </div>
+                <div id="bottom-controles">
+                    <div id="bottom-elements">
+                        <span id="play-pause" class="focusable down">
+                            <i id="play" class="fas fa-pause"></i>
+                        </span>
+                        <span id="timer" class="down">00:00</span>
+                        <div class="progress-bar down">
+                            <div id="real-time" class="focusable"></div>
+                        </div>
+                        <span id="duration" class="down">00:00</span>
+                    </div>
+                </div>
+            </div>
+            <div id="vid-Title">
+                <span> Titre </span>
+            </div>
+            <div id="audio-cc-list" style="display: none"></div>
         </div>
     </body>
 </html>
