--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
         <link rel="stylesheet" type="text/css" href="css/series.css" />
         <link rel="stylesheet" type="text/css" href="css/error.css" />
         <link rel="stylesheet" type="text/css" href="css/player.css" />
+        <link rel="stylesheet" type="text/css" href="css/subtitles.css" />
 
         <!-- Bootstrap -->
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-F3w7mX95PdgyTmZZMECAngseQB83DfGTowi0iMjiWaeVhAn4FJkqJByhZMI3AhiU" crossorigin="anonymous" />
@@ -85,6 +86,7 @@
         <script src="js/snippets/movie-list.js"></script>
         <script src="js/snippets/serie-list.js"></script>
         <script src="js/snippets/movie-details.js"></script>
+        <script src="js/snippets/seie-details.js"></script>
         <script src="js/snippets/player.js"></script>
 
         <script src="config.js"></script>
