--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
                 <div class="modal-dialog">
                     <div class="modal-content">
                         <div class="modal-header">
-                            <h5 class="modal-title" id="exampleModalLabel"> Exit </h5>
+                            <h5 class="modal-title" id="exampleModalLabel" data-i18n=""> Exit </h5>
                         </div>
                         <div class="modal-body">
                             Are you sure you want exit ?
@@ -285,8 +285,7 @@
                 <label>Director : <span id="director"></span></label>
                 <label id="genre"></label>
                 <button class="btn focusable" data-action="watch"><i class="bi bi-play-fill"></i>Watch this film</button>
-                <button class="btn focusable" data-action="trailer"><i class="bi bi-collection-play-fill"></i>Watch trailer</button>
-                <button class="btn focusable" data-action="cc"><i class="bi bi-badge-cc-fill"></i>Audio and CC</button>
+                <button class="btn focusable" data-action="trailer"><i class="bi bi-collection-play-fill"></i>Resume film</button>
                 <button class="btn focusable" data-action="later"><i class="bi bi-plus-square-fill"></i>Add to watch later</button>
             </div>
         </div>
