Finishing profiles page and settings

--- a/index.html
+++ b/index.html
@@ -378,6 +378,7 @@
         </div>
         <div id="scene-watch-later" class="scene" style="display: none">
             <h3>Watch later</h3>
+            <div class="row" style="display: none;"></div>
         </div>
 
         <!-- Snippets -->
