--- a/index.html
+++ b/index.html
@@ -310,11 +310,14 @@
             <div id="snippet-serie-details" style="display: none;">
                 <label>Director : <span id="director"></span></label>
                 <label id="genre"></label>
-                <button class="btn focusable" data-action="watch"><i class="bi bi-play-fill"></i>Watch serie</button>
+                <div class="div-button">
+
+                </div>
+                <!-- <button class="btn focusable" data-action="watch"><i class="bi bi-play-fill"></i>Watch serie</button>
                 <button class="btn focusable" data-action="trailer"><i class="bi bi-collection-play-fill"></i>Watch trailer</button>
                 <button class="btn focusable" data-action="episodes"><i class="bi bi-bar-chart-steps"></i>Saisons and episodes</button>
                 <button class="btn focusable" data-action="cc"><i class="bi bi-badge-cc-fill"></i>Audio and CC</button>
-                <button class="btn focusable" data-action="later"><i class="bi bi-plus-square-fill"></i>Add to watch later</button>
+                <button class="btn focusable" data-action="later"><i class="bi bi-plus-square-fill"></i>Add to watch later</button> -->
             </div>
             <div id="snippet-serie-episodes" style="display: none;"></div>
         </div>
@@ -350,7 +353,7 @@
                 <h5 id="profile_name" class="mb-0"></h5>
             </header>
             <ul id="sidebar-list"></ul>
-            <ul id="sidebar-footer"></ul>
+            <ul id="sidebar-footer"></ul> 
         </div>
         <div id="snippet-player" style="display: none">
             <div id="controles">
