--- a/index.html
+++ b/index.html
@@ -340,7 +340,7 @@
         </div>
         <div id="scene-watch-later" class="scene" style="display: none">
             <h3>Watch later</h3>
-            <div class="row" style="display: none;"></div>
+            <div class="row"></div>
         </div>
 
         <!-- Snippets -->
