--- a/index.html
+++ b/index.html
@@ -88,6 +88,7 @@
         <script src="js/snippets/live-list.js"></script>
         <script src="js/snippets/movie-list.js"></script>
         <script src="js/snippets/serie-list.js"></script>
+        <script src="js/snippets/later-list.js"></script>
         <script src="js/snippets/movie-details.js"></script>
         <script src="js/snippets/serie-details.js"></script>
         <script src="js/snippets/serie-episodes.js"></script>
@@ -343,7 +344,7 @@
         </div>
         <div id="scene-watch-later" class="scene" style="display: none">
             <h3>Watch later</h3>
-            <div class="row"></div>
+            <div id="snippet-watch-later-list" class="row"></div>
         </div>
 
         <!-- Snippets -->
