--- a/index.html
+++ b/index.html
@@ -343,7 +343,7 @@
             </div>
         </div>
         <div id="scene-watch-later" class="scene" style="display: none">
-            <h3>Watch later</h3>
+            <h3 data-i18n="watch_later_header"></h3>
             <div id="snippet-watch-later-list" class="row"></div>
         </div>
 
